fix(Header):  wrap menu items in links

--- a/src/components/app-header/app-header.module.scss
+++ b/src/components/app-header/app-header.module.scss
@@ -26,6 +26,13 @@
 		align-items: center;
 		padding: 16px;
 	}
+
+	.link {
+		display: flex;
+		align-items: center;
+		text-decoration: none;
+		color: inherit;
+	}
 }
 
 .logo {
